Update terms of service and improve pre-push script
Rewrote and simplified the terms of service in Portuguese, English, Spanish, and Portuguese (Portugal) for clarity and conciseness, focusing on the platform's nature, user responsibilities, and legal information. Enhanced the .husky/pre-push script to ensure Node.js environment is properly loaded, improving compatibility with GitHub Desktop and fallback to system node if nvm is unavailable.

--- a/content/terms/en.mdx
+++ b/content/terms/en.mdx
@@ -1,196 +1,109 @@
-# Terms and Conditions
+# Terms of Service
 
 _Effective Date:_ April 16, 2025
 
-These Terms and Conditions ("Terms") govern the use of the services provided by **Búzios e Tartarugas, Lda.**, a company registered in Portugal, with the business name **Eleva.care** ("Eleva.care," "we," "us," or "our"). By using or accessing any of our services, you agree to be bound by these Terms.
+Welcome to **Eleva.care** (operated by **Búzios e Tartarugas, Lda.**). By using Eleva.care, you agree to these Terms. Please read them carefully.
 
-## 1. Acceptance of Terms
+## 1) What Eleva.care is (and isn’t)
 
-By accessing or using the services provided by Eleva.care, you agree to comply with and be bound by these Terms and all applicable laws and regulations. If you do not agree to these Terms, please do not use our services.
+- Eleva.care is a technology marketplace that connects people seeking care with independent, licensed healthcare practitioners.
+- Eleva.care is not a clinic, medical practice, or healthcare provider. We don’t employ, supervise, or control practitioners, and we don’t provide medical advice, diagnosis, or treatment.
+- Practitioners are independent, licensed in their jurisdictions, hold their own professional liability insurance, and are solely responsible for the care they provide.
 
-## 2. Platform Nature and Services Provided
+## 2) What we provide
 
-### 2.1 Marketplace Platform - Not a Healthcare Provider
+- Accounts, identity verification, and support
+- For clients: search and discovery, booking and scheduling, payments (via Stripe), secure messaging, and your appointment history
+- For practitioners: profile management, scheduling, encrypted notes (you control the content), payments and payouts (via Stripe Connect), secure client messaging, and encrypted file storage
+- We do not provide medical services or verify medical credentials beyond practitioner self‑certification
 
-**IMPORTANT NOTICE**: Eleva.care is a **technology marketplace platform** that connects patients with independent, licensed healthcare practitioners.
+Our features may change over time.
 
-**Eleva.care is NOT**:
+## 3) Accounts and eligibility
 
-- ❌ A healthcare provider
-- ❌ A medical practice or clinic
-- ❌ Responsible for medical care, diagnoses, or treatment
-- ❌ Employing or supervising healthcare practitioners
+- You must be 18+ and able to enter a contract
+- Provide accurate information, keep your credentials secure, and tell us if there’s unauthorized use of your account
 
-**Healthcare practitioners on our platform are**:
+## 4) Using Eleva.care
 
-- ✅ Independent professionals
-- ✅ Licensed in their respective jurisdictions
-- ✅ Solely responsible for all medical care they provide
-- ✅ Maintaining their own professional liability insurance
+Use Eleva.care lawfully and respectfully. Don’t:
 
-### 2.2 Technology Services We Provide
+- Break the law or others’ rights
+- Commit fraud or mislead others
+- Post harmful, illegal, or defamatory content
+- Interfere with the platform’s normal operation
+- Claim to be a licensed professional if you’re not
+- Use Eleva.care for emergencies
 
-Eleva.care provides the following **technology platform services**:
+We may suspend or terminate access if these rules are violated.
 
-**For All Users:**
+## 5) Clients
 
-- User account creation and management
-- Identity verification and authentication
-- Platform support and customer service
+- You choose your practitioner and should check their credentials and licensing
+- Your care relationship is with the practitioner, not Eleva.care
+- Eleva.care isn’t responsible for the medical care you receive
 
-**For Patients/Clients:**
+## 6) Practitioners
 
-- Practitioner search and discovery tools
-- Secure appointment booking and scheduling system
-- Payment processing for practitioner services (via Stripe)
-- Secure messaging with your chosen practitioner
-- Access to your booking history
+By using Eleva.care, you represent and warrant that you:
 
-**For Healthcare Practitioners:**
+- Are duly licensed and in good standing
+- Maintain professional liability insurance
+- Are solely responsible for the care you provide and for obtaining informed consent
+- Comply with all applicable healthcare laws and regulations
+- Operate as an independent contractor, not an employee of Eleva.care
 
-- Professional profile creation and management
-- Appointment scheduling tools
-- Encrypted clinical notes storage (you control the content)
-- Payment collection and payout processing (via Stripe Connect)
-- Secure patient communication tools
-- File attachment storage (encrypted)
+## 7) Payments and fees
 
-**What We Do NOT Provide:**
+- Prices and fees are shown before you pay; payments are processed by Stripe
+- Unless the law requires otherwise, fees are generally non‑refundable
+- If there’s a payment issue, we’ll help you resolve it
 
-- ❌ Medical advice, diagnoses, or treatment
-- ❌ Medical supervision or oversight of practitioners
-- ❌ Verification of practitioner medical credentials (practitioners self-certify)
-- ❌ Medical malpractice insurance
-- ❌ Healthcare services of any kind
+## 8) Privacy
 
-These services are subject to change, and Eleva.care reserves the right to modify or discontinue any part of the platform services at any time.
+Your use is governed by our Privacy Policy. We process personal data in line with applicable law, including the GDPR where relevant.
 
-## 3. Account Registration and Eligibility
+## 9) Intellectual property
 
-To access certain features of our services, you must create an account. You agree to:
+The Eleva.care platform, including text, graphics, logos, and software, is owned by Eleva.care or our licensors. Please don’t copy, use, or distribute our materials without permission.
 
-- Provide accurate, current, and complete information during the registration process.
-- Maintain the security and confidentiality of your account credentials.
-- Notify Eleva.care immediately of any unauthorized use of your account.
+## 10) Liability
 
-You must be at least 18 years old and legally capable of entering into a contract in your jurisdiction to use our services.
+To the fullest extent permitted by law:
 
-## 4. Use of Platform Services
+- We provide technology platform services “as is” and are responsible only for operating the platform
+- We are not responsible for any medical care, advice, diagnosis, treatment, outcomes, or disputes between you and a practitioner
 
-You agree to use Eleva.care's platform services only for lawful purposes and in accordance with these Terms. You are prohibited from:
+### Emergencies
 
-- Violating any applicable laws or regulations.
-- Engaging in fraudulent or deceptive activities.
-- Distributing harmful, defamatory, or illegal content.
-- Interfering with the normal operation of the platform.
-- Misrepresenting yourself as a licensed healthcare professional (if you are not).
-- Using the platform for medical emergencies.
+Eleva.care is not for emergencies. If you need urgent help, call your local emergency number (EU: 112, US: 911) immediately.
 
-Eleva.care may suspend or terminate your access if you violate these Terms.
+## 11) Indemnity
 
-### 4.1 For Patients/Clients
+You agree to indemnify and hold Eleva.care harmless from claims and costs arising from your misuse of the platform, violation of these Terms, or infringement of others’ rights.
 
-You understand and agree that:
+## 12) Ending or suspending service
 
-- Healthcare practitioners on our platform are independent professionals, not Eleva.care employees
-- You are responsible for choosing your healthcare practitioner
-- You should verify practitioner credentials and licensing before booking
-- Your relationship is with the practitioner, not with Eleva.care
-- Eleva.care is not responsible for the medical care you receive
+We may suspend or terminate access if Terms are violated or to protect our community. You can close your account anytime by contacting support. Any amounts owed remain due.
 
-### 4.2 For Healthcare Practitioners
+## 13) Governing law
 
-By using our platform as a practitioner, you represent and warrant that:
+These Terms are governed by Portuguese law. Courts in Portugal have jurisdiction over disputes related to these Terms or your use of Eleva.care.
 
-- You are a licensed healthcare professional in good standing
-- You maintain current professional liability insurance
-- You are solely responsible for all medical care you provide
-- You will comply with all applicable healthcare regulations
-- You will obtain informed consent from your patients
-- You understand you are an independent contractor, not an Eleva.care employee
+## 14) Changes to these Terms
 
-## 5. Payment Terms
+We may update these Terms. We’ll notify you of material changes; continuing to use Eleva.care means you accept the updated Terms.
 
-Certain services offered by Eleva.care are paid services. By using paid services, you agree to pay the applicable fees, which will be clearly communicated at the time of purchase. Payment methods include credit cards, bank transfers, and other payment systems as available.
+## 15) EU consumer information
 
-All fees are non-refundable, except as required by applicable law. If there is a problem with the payment processing, Eleva.care will work with you to resolve the issue.
-
-## 6. Privacy and Data Protection
-
-Your use of Eleva.care's services is governed by our **Privacy Policy**. We are committed to protecting your personal data and ensuring compliance with applicable data protection laws, including the **General Data Protection Regulation (GDPR)**.
-
-By using our services, you consent to the collection, use, and processing of your personal data as described in our Privacy Policy.
-
-## 7. Intellectual Property
-
-All content and materials on the Eleva.care platform, including text, graphics, logos, and software, are the property of Eleva.care or our licensors and are protected by intellectual property laws. You agree not to use, copy, or distribute any of these materials without explicit permission from Eleva.care.
-
-## 8. Limitation of Liability
-
-### 8.1 Platform Liability
-
-To the fullest extent permitted by law, Eleva.care is liable only for the performance of our **technology platform services**. We are not liable for any direct, indirect, incidental, special, or consequential damages resulting from your use or inability to use our platform services.
-
-### 8.2 No Liability for Medical Care
-
-**Eleva.care is NOT liable for:**
-
-- ❌ Any medical care, advice, diagnosis, or treatment provided by practitioners
-- ❌ Medical outcomes, whether positive or negative
-- ❌ Medical malpractice or professional negligence by practitioners
-- ❌ Practitioner qualifications, licensing, or credentials
-- ❌ Quality of medical services provided by practitioners
-- ❌ Practitioner-patient disputes regarding medical care
-- ❌ Any health outcomes resulting from practitioner services
-
-**The healthcare practitioner you choose is solely responsible for all medical care they provide.**
-
-### 8.3 Emergency Disclaimer
-
-**Eleva.care is NOT for medical emergencies.** If you are experiencing a medical emergency:
-
-- **EU**: Call 112
-- **USA**: Call 911
-- Or contact your local emergency services immediately
-
-Do not use our platform for urgent or emergency medical situations.
-
-## 9. Indemnity
-
-You agree to indemnify and hold Eleva.care, its affiliates, employees, and partners harmless from any claims, damages, liabilities, and expenses arising out of your use of our services, violation of these Terms, or infringement of any third-party rights.
-
-## 10. Termination
-
-Eleva.care may suspend or terminate your access to the services at any time, without prior notice, if we believe you have violated these Terms or engaged in activities that harm Eleva.care's reputation or services. You may terminate your account by contacting Eleva.care customer support.
-
-Upon termination, you will cease to have access to the services, and all outstanding payments must be settled.
-
-## 11. Governing Law and Dispute Resolution
-
-These Terms are governed by the laws of Portugal. Any disputes arising from these Terms or the use of our services shall be resolved in the courts of Portugal.
-
-## 12. Changes to Terms
-
-Eleva.care reserves the right to update or modify these Terms at any time. We will notify you of any material changes via email or through the platform. Continued use of our services after changes are made will be considered acceptance of the updated Terms.
-
-## 13. Miscellaneous
-
-- **Severability:** If any provision of these Terms is found to be invalid or unenforceable, the remaining provisions will remain in effect.
-- **Waiver:** Failure to enforce any part of these Terms does not waive our right to enforce those provisions in the future.
-
-## 14. Consumer Rights and Alternative Dispute Resolution (EU)
-
-Nothing in these Terms affects statutory consumer rights that cannot be waived under applicable law. If you are a consumer residing in the EU/EEA, you may access the European Commission’s Online Dispute Resolution (ODR) platform for consumer disputes: https://ec.europa.eu/consumers/odr. We are not obliged and do not commit to use ADR entities to resolve consumer disputes unless required by law.
-
-### Right of Withdrawal
-
-Where the EU right of withdrawal applies to certain non-healthcare platform services, you may withdraw within 14 days unless you expressly request immediate performance. For time‑specific healthcare services provided by independent practitioners via the platform, the right of withdrawal may not apply once the service has begun or for services scheduled for a specific date and time, consistent with applicable consumer law exemptions.
+- Your statutory consumer rights aren’t affected. You can use the European Commission’s Online Dispute Resolution platform: https://ec.europa.eu/consumers/odr
+- Right of withdrawal: Where applicable to certain non‑healthcare platform services, you may withdraw within 14 days unless you request immediate performance. For time‑specific healthcare services performed by independent practitioners, withdrawal may not apply once the service begins or for services scheduled for a specific date/time, as allowed by law.
 
 ---
 
-## Legal Information
+## Legal information
 
-These Terms and Conditions are issued by:
+Issued by:
 
 - **Legal Entity:** BÚZIOS E TARTARUGAS - LDA
 - **Commercial Name:** Eleva.care
