--- a/content/terms/es.mdx
+++ b/content/terms/es.mdx
@@ -1,201 +1,114 @@
-# Términos y Condiciones
+# Términos del Servicio
 
-_Fecha de Vigencia:_ 16 de abril de 2025
+_Fecha de vigencia:_ 16 de abril de 2025
 
-Estos Términos y Condiciones ("Términos") rigen el uso de los servicios proporcionados por **Búzios e Tartarugas, Lda.**, una empresa registrada en Portugal, con el nombre comercial **Eleva.care** ("Eleva.care," "nosotros," o "nuestro"). Al utilizar o acceder a cualquiera de nuestros servicios, acepta estar sujeto a estos Términos.
+Bienvenido a **Eleva.care** (operado por **Búzios e Tartarugas, Lda.**). Al usar Eleva.care, acepta estos Términos. Léelos con atención.
 
-## 1. Aceptación de los Términos
+## 1) Qué es Eleva.care (y qué no es)
 
-Al acceder o utilizar los servicios proporcionados por Eleva.care, acepta cumplir y estar sujeto a estos Términos y todas las leyes y regulaciones aplicables. Si no está de acuerdo con estos Términos, por favor no utilice nuestros servicios.
+- Eleva.care es un marketplace tecnológico que conecta a personas que buscan atención con profesionales de salud independientes y licenciados.
+- Eleva.care no es una clínica ni un proveedor de salud. No empleamos, supervisamos ni controlamos a los profesionales, y no ofrecemos asesoramiento, diagnóstico ni tratamiento médico.
+- Los profesionales son independientes, licenciados en sus jurisdicciones, cuentan con su propio seguro de responsabilidad profesional y son los únicos responsables de la atención que brindan.
 
-## 2. Naturaleza de la Plataforma y Servicios Proporcionados
+## 2) Lo que ofrecemos
 
-### 2.1 Plataforma Marketplace - No es un Proveedor de Atención Médica
+- Cuentas, verificación de identidad y soporte
+- Para clientes: búsqueda y descubrimiento, reservas y agenda, pagos (vía Stripe), mensajería segura e historial de citas
+- Para profesionales: perfil, agenda, notas cifradas (usted controla el contenido), pagos y cobros (Stripe Connect), mensajería segura y archivos cifrados
+- No prestamos servicios médicos ni verificamos credenciales más allá de la autocertificación del profesional
 
-**AVISO IMPORTANTE**: Eleva.care es una **plataforma marketplace de tecnología** que conecta pacientes con profesionales de salud independientes y licenciados.
+Nuestras funciones pueden cambiar con el tiempo.
 
-**Eleva.care NO es**:
+## 3) Cuentas y elegibilidad
 
-- ❌ Un proveedor de atención médica
-- ❌ Una clínica o consultorio médico
-- ❌ Responsable de la atención médica, diagnósticos o tratamiento
-- ❌ Empleador o supervisor de profesionales de salud
+- Debe ser mayor de 18 años y capaz de contratar
+- Proporcione información exacta, mantenga seguras sus credenciales e infórmenos sobre usos no autorizados
 
-**Los profesionales de salud en nuestra plataforma son**:
+## 4) Uso de Eleva.care
 
-- ✅ Profesionales independientes
-- ✅ Licenciados en sus respectivas jurisdicciones
-- ✅ Únicos responsables de toda la atención médica que brindan
-- ✅ Mantienen su propio seguro de responsabilidad profesional
+Use Eleva.care de forma legal y respetuosa. No:
 
-### 2.2 Servicios Tecnológicos que Proporcionamos
+- Infrinja la ley ni los derechos de terceros
+- Cometa fraude o engañe a otros
+- Publique contenido dañino, ilegal o difamatorio
+- Interfiera con el funcionamiento normal de la plataforma
+- Se haga pasar por profesional licenciado si no lo es
+- Use Eleva.care para emergencias
 
-Eleva.care proporciona los siguientes **servicios de plataforma tecnológica**:
+Podemos suspender o terminar el acceso si se incumplen estas reglas.
 
-**Para Todos los Usuarios:**
+## 5) Clientes
 
-- Creación y gestión de cuenta de usuario
-- Verificación de identidad y autenticación
-- Soporte de la plataforma y servicio al cliente
+- Usted elige a su profesional y debe verificar sus credenciales y licencias
+- Su relación de atención es con el profesional, no con Eleva.care
+- Eleva.care no es responsable de la atención médica que reciba
 
-**Para Pacientes/Clientes:**
+## 6) Profesionales
 
-- Herramientas de búsqueda y descubrimiento de profesionales
-- Sistema seguro de reservas y programación de citas
-- Procesamiento de pagos para servicios de profesionales (vía Stripe)
-- Mensajería segura con su profesional elegido
-- Acceso a su historial de reservas
+Al usar Eleva.care, declara y garantiza que:
 
-**Para Profesionales de Salud:**
+- Está debidamente licenciado y en buen estado
+- Mantiene seguro de responsabilidad profesional
+- Es el único responsable de la atención que brinda y de obtener el consentimiento informado
+- Cumple con la normativa sanitaria aplicable
+- Opera como contratista independiente, no empleado de Eleva.care
 
-- Creación y gestión de perfil profesional
-- Herramientas de programación de citas
-- Almacenamiento cifrado de notas clínicas (usted controla el contenido)
-- Cobro y procesamiento de pagos (vía Stripe Connect)
-- Herramientas de comunicación segura con pacientes
-- Almacenamiento de archivos adjuntos (cifrado)
+## 7) Pagos y tarifas
 
-**Lo Que NO Proporcionamos:**
+- Los precios y tarifas se muestran antes de pagar; los pagos se procesan con Stripe
+- Salvo lo que exija la ley, las tarifas no son reembolsables
+- Si hay un problema de pago, le ayudaremos a resolverlo
 
-- ❌ Asesoramiento médico, diagnósticos o tratamiento
-- ❌ Supervisión médica o fiscalización de profesionales
-- ❌ Verificación de credenciales médicas de los profesionales (los profesionales autocertifican)
-- ❌ Seguro de responsabilidad profesional médica
-- ❌ Servicios de salud de cualquier tipo
+## 8) Privacidad
 
-Estos servicios están sujetos a cambios, y Eleva.care se reserva el derecho de modificar o descontinuar cualquier parte de los servicios de la plataforma en cualquier momento.
+Su uso se rige por nuestra Política de Privacidad. Tratamos datos personales conforme a la ley aplicable, incluido el RGPD cuando corresponda.
 
-## 3. Registro de Cuenta y Elegibilidad
+## 9) Propiedad intelectual
 
-Para acceder a ciertas funciones de nuestros servicios, debe crear una cuenta. Acepta:
+La plataforma Eleva.care (texto, gráficos, logotipos y software) pertenece a Eleva.care o a sus licenciantes. No copie ni distribuya nuestros materiales sin permiso.
 
-- Proporcionar información precisa, actual y completa durante el proceso de registro.
-- Mantener la seguridad y confidencialidad de las credenciales de su cuenta.
-- Notificar a Eleva.care inmediatamente de cualquier uso no autorizado de su cuenta.
+## 10) Responsabilidad
 
-Debe tener al menos 18 años y ser legalmente capaz de celebrar un contrato en su jurisdicción para utilizar nuestros servicios.
+En la máxima medida permitida por la ley:
 
-## 4. Uso de los Servicios de la Plataforma
+- Prestamos servicios tecnológicos “tal cual” y somos responsables solo del funcionamiento de la plataforma
+- No somos responsables de la atención médica, asesoramiento, diagnóstico, tratamiento, resultados ni disputas entre usted y el profesional
 
-Acepta utilizar los servicios de la plataforma Eleva.care solo para fines lícitos y de acuerdo con estos Términos. Está prohibido:
+### Emergencias
 
-- Violar cualquier ley o regulación aplicable.
-- Participar en actividades fraudulentas o engañosas.
-- Distribuir contenido dañino, difamatorio o ilegal.
-- Interferir con el funcionamiento normal de la plataforma.
-- Hacerse pasar por un profesional de salud licenciado (si no lo es).
-- Utilizar la plataforma para emergencias médicas.
+Eleva.care no es para emergencias. Si necesita ayuda urgente, llame al número local (UE: 112, EE. UU.: 911) de inmediato.
 
-Eleva.care puede suspender o terminar su acceso si viola estos Términos.
+## 11) Indemnización
 
-### 4.1 Para Pacientes/Clientes
+Usted indemnizará y eximirá a Eleva.care de reclamaciones y costos derivados de su uso indebido de la plataforma, del incumplimiento de estos Términos o de la infracción de derechos de terceros.
 
-Usted entiende y acepta que:
+## 12) Fin o suspensión del servicio
 
-- Los profesionales de salud en nuestra plataforma son profesionales independientes, no empleados de Eleva.care
-- Usted es responsable de elegir su profesional de salud
-- Debe verificar las credenciales y licencias del profesional antes de reservar
-- Su relación es con el profesional, no con Eleva.care
-- Eleva.care no es responsable de la atención médica que recibe
+Podemos suspender o terminar el acceso si se incumplen los Términos o para proteger a la comunidad. Puede cerrar su cuenta en cualquier momento contactando soporte. Cualquier monto adeudado seguirá siendo exigible.
 
-### 4.2 Para Profesionales de Salud
+## 13) Ley aplicable
 
-Al utilizar nuestra plataforma como profesional, declara y garantiza que:
+Estos Términos se rigen por la ley portuguesa. Los tribunales de Portugal tendrán jurisdicción sobre disputas relacionadas con estos Términos o su uso de Eleva.care.
 
-- Es un profesional de salud licenciado en buen estado
-- Mantiene seguro de responsabilidad profesional vigente
-- Es el único responsable de toda la atención médica que brinda
-- Cumplirá con todas las regulaciones de salud aplicables
-- Obtendrá consentimiento informado de sus pacientes
-- Entiende que es un contratista independiente, no un empleado de Eleva.care
+## 14) Cambios en estos Términos
 
-## 5. Términos de Pago
+Podemos actualizar estos Términos. Avisaremos cambios materiales; seguir usando Eleva.care implica aceptar los Términos actualizados.
 
-Ciertos servicios ofrecidos por Eleva.care son servicios de pago. Al utilizar servicios de pago, acepta pagar las tarifas aplicables, que se comunicarán claramente en el momento de la compra. Los métodos de pago incluyen tarjetas de crédito, transferencias bancarias y otros sistemas de pago disponibles.
+## 15) Información para consumidores de la UE
 
-Todas las tarifas no son reembolsables, excepto según lo requerido por la ley aplicable. Si hay un problema con el procesamiento del pago, Eleva.care trabajará con usted para resolver el problema.
-
-## 6. Privacidad y Protección de Datos
-
-Su uso de los servicios de Eleva.care se rige por nuestra **Política de Privacidad**. Estamos comprometidos a proteger sus datos personales y garantizar el cumplimiento de las leyes de protección de datos aplicables, incluyendo el **Reglamento General de Protección de Datos (RGPD)**.
-
-Al utilizar nuestros servicios, consiente la recopilación, uso y procesamiento de sus datos personales según lo descrito en nuestra Política de Privacidad.
-
-## 7. Propiedad Intelectual
-
-Todo el contenido y materiales en la plataforma Eleva.care, incluyendo texto, gráficos, logotipos y software, son propiedad de Eleva.care o de nuestros licenciantes y están protegidos por leyes de propiedad intelectual. Acepta no usar, copiar o distribuir ninguno de estos materiales sin permiso explícito de Eleva.care.
-
-## 8. Limitación de Responsabilidad
-
-### 8.1 Responsabilidad de la Plataforma
-
-En la máxima medida permitida por la ley, Eleva.care es responsable solo del rendimiento de nuestros **servicios de plataforma tecnológica**. No somos responsables de ningún daño directo, indirecto, incidental, especial o consecuente resultante de su uso o incapacidad de usar nuestros servicios de plataforma.
-
-### 8.2 Sin Responsabilidad por la Atención Médica
-
-**Eleva.care NO es responsable de:**
-
-- ❌ Cualquier atención médica, asesoramiento, diagnóstico o tratamiento proporcionado por los profesionales
-- ❌ Resultados médicos, ya sean positivos o negativos
-- ❌ Negligencia médica o negligencia profesional por parte de los profesionales
-- ❌ Calificaciones, licencias o credenciales de los profesionales
-- ❌ Calidad de los servicios médicos proporcionados por los profesionales
-- ❌ Disputas profesional-paciente con respecto a la atención médica
-- ❌ Cualquier resultado de salud resultante de los servicios del profesional
-
-**El profesional de salud que elija es el único responsable de toda la atención médica que brinda.**
-
-### 8.3 Aviso de Emergencia
-
-**Eleva.care NO es para emergencias médicas.** Si experimenta una emergencia médica:
-
-- **UE**: Llame al 112
-- **EE.UU.**: Llame al 911
-- O contacte inmediatamente a sus servicios de emergencia locales
-
-No utilice nuestra plataforma para situaciones médicas urgentes o de emergencia.
-
-## 9. Indemnización
-
-Acepta indemnizar y eximir a Eleva.care, sus afiliados, empleados y socios de cualquier reclamación, daño, responsabilidad y gasto que surja de su uso de nuestros servicios, violación de estos Términos o infracción de cualquier derecho de terceros.
-
-## 10. Terminación
-
-Eleva.care puede suspender o terminar su acceso a los servicios en cualquier momento, sin previo aviso, si creemos que ha violado estos Términos o ha participado en actividades que perjudican la reputación o los servicios de Eleva.care. Puede terminar su cuenta contactando al servicio de atención al cliente de Eleva.care.
-
-Tras la terminación, dejará de tener acceso a los servicios, y todos los pagos pendientes deben liquidarse.
-
-## 11. Ley Aplicable y Resolución de Disputas
-
-Estos Términos se rigen por las leyes de Portugal. Cualquier disputa que surja de estos Términos o del uso de nuestros servicios se resolverá en los tribunales de Portugal.
-
-## 12. Cambios en los Términos
-
-Eleva.care se reserva el derecho de actualizar o modificar estos Términos en cualquier momento. Le notificaremos de cualquier cambio material por correo electrónico o a través de la plataforma. El uso continuado de nuestros servicios después de realizar los cambios se considerará aceptación de los Términos actualizados.
-
-## 13. Disposiciones Varias
-
-- **Divisibilidad:** Si alguna disposición de estos Términos se considera inválida o inaplicable, las disposiciones restantes permanecerán en vigor.
-- **Renuncia:** El incumplimiento de hacer cumplir cualquier parte de estos Términos no renuncia a nuestro derecho de hacer cumplir esas disposiciones en el futuro.
-
-## 14. Derechos del Consumidor y Resolución Alternativa de Disputas (UE)
-
-Nada en estos Términos afecta los derechos legales de los consumidores que no pueden ser renunciados según la ley aplicable. Si usted es consumidor residente en la UE/EEE, puede acceder a la plataforma de Resolución de Disputas en Línea (ODR) de la Comisión Europea: https://ec.europa.eu/consumers/odr. No estamos obligados ni nos comprometemos a utilizar entidades de ADR para resolver disputas de consumidores salvo que la ley lo exija.
-
-### Derecho de Desistimiento
-
-Cuando sea aplicable el derecho de desistimiento de la UE a ciertos servicios no sanitarios de la plataforma, usted puede desistir en 14 días salvo que solicite expresamente la prestación inmediata. Para servicios sanitarios con fecha/hora específica prestados por profesionales independientes a través de la plataforma, el derecho de desistimiento puede no aplicar una vez iniciado el servicio o para servicios programados para una fecha y hora determinadas, conforme a las exenciones de consumo aplicables.
+- Sus derechos legales no se ven afectados. Puede usar la plataforma ODR de la Comisión Europea: https://ec.europa.eu/consumers/odr
+- Derecho de desistimiento: cuando sea aplicable a ciertos servicios no sanitarios de la plataforma, puede desistir en 14 días salvo que solicite ejecución inmediata. Para servicios sanitarios en fecha/hora específica prestados por profesionales independientes, puede no aplicar una vez iniciado el servicio o para servicios con fecha/hora concreta, según la ley.
 
 ---
 
-## Información Legal
+## Información legal
 
-Estos Términos y Condiciones son emitidos por:
+Emitido por:
 
 - **Entidad Legal:** BÚZIOS E TARTARUGAS - LDA
 - **Nombre Comercial:** Eleva.care
 - **NIPC/NIF:** 515001708
-- **Forma Legal:** Sociedade por Quotas (LDA)
+- **Forma Jurídica:** Sociedade por Quotas (LDA)
 - **Domicilio Social:** Rua Gil Vicente, 2, 2775-198 Parede, Portugal
 - **Director General:** Rodrigo Barona Oliete
 - **Email:** [support@eleva.care](mailto:support@eleva.care)
