--- a/content/terms/br.mdx
+++ b/content/terms/br.mdx
@@ -1,197 +1,109 @@
-# Termos e Condições
+# Termos de Serviço
 
-_Data de Vigência:_ 16 de abril de 2025
+_Data de vigência:_ 16 de abril de 2025
 
-Estes Termos e Condições ("Termos") regem o uso dos serviços fornecidos por **Búzios e Tartarugas, Lda.**, uma empresa registrada em Portugal, com o nome comercial **Eleva.care** ("Eleva.care," "nós," ou "nosso"). Ao utilizar ou acessar qualquer um de nossos serviços, você concorda em estar vinculado a estes Termos.
+Bem‑vindo à **Eleva.care** (operada por **Búzios e Tartarugas, Lda.**). Ao usar a Eleva.care, você concorda com estes Termos. Leia com atenção.
 
-## 1. Aceitação dos Termos
+## 1) O que é a Eleva.care (e o que não é)
 
-Ao acessar ou utilizar os serviços fornecidos pela Eleva.care, você concorda em cumprir e estar vinculado a estes Termos e todas as leis e regulamentos aplicáveis. Se não concordar com estes Termos, por favor não utilize nossos serviços.
+- Marketplace tecnológico que conecta pessoas a profissionais de saúde independentes e licenciados.
+- Não somos clínica nem prestador de saúde. Não empregamos, supervisionamos ou controlamos profissionais e não oferecemos aconselhamento, diagnóstico ou tratamento médico.
+- Profissionais são independentes, licenciados em suas jurisdições, mantêm seguro de responsabilidade profissional e são os únicos responsáveis pelos cuidados que prestam.
 
-## 2. Natureza da Plataforma e Serviços Fornecidos
+## 2) O que oferecemos
 
-### 2.1 Plataforma Marketplace - Não é um Provedor de Cuidados de Saúde
+- Contas, verificação de identidade e suporte
+- Para clientes: busca e descoberta, agendamentos e reservas, pagamentos (Stripe), mensagens seguras e histórico
+- Para profissionais: perfil, agenda, notas criptografadas (você controla o conteúdo), pagamentos e repasses (Stripe Connect), mensagens seguras e arquivos criptografados
+- Não prestamos serviços médicos nem verificamos credenciais além da auto‑certificação do profissional
 
-**AVISO IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia** que conecta pacientes com profissionais de saúde independentes e licenciados.
+As funcionalidades podem mudar ao longo do tempo.
 
-**A Eleva.care NÃO é**:
+## 3) Contas e elegibilidade
 
-- ❌ Um provedor de cuidados de saúde
-- ❌ Uma clínica ou consultório médico
-- ❌ Responsável pelos cuidados médicos, diagnósticos ou tratamento
-- ❌ Empregador ou supervisor de profissionais de saúde
+- Ter 18+ e capacidade para contratar
+- Fornecer informações corretas, manter credenciais seguras e avisar sobre uso não autorizado
 
-**Os profissionais de saúde em nossa plataforma são**:
+## 4) Uso da Eleva.care
 
-- ✅ Profissionais independentes
-- ✅ Licenciados em suas respectivas jurisdições
-- ✅ Únicos responsáveis por todos os cuidados médicos que prestam
-- ✅ Possuem seu próprio seguro de responsabilidade profissional
+Use a Eleva.care de forma legal e respeitosa. Não:
 
-### 2.2 Serviços Tecnológicos que Fornecemos
+- viole a lei ou direitos de terceiros
+- cometa fraude ou engane outras pessoas
+- publique conteúdo ilegal, difamatório ou prejudicial
+- interfira com o funcionamento normal da plataforma
+- declare ser profissional licenciado se não for
+- use a Eleva.care para emergências
 
-A Eleva.care fornece os seguintes **serviços de plataforma tecnológica**:
+Podemos suspender ou encerrar o acesso em caso de violação.
 
-**Para Todos os Usuários:**
+## 5) Clientes
 
-- Criação e gerenciamento de conta de usuário
-- Verificação de identidade e autenticação
-- Suporte da plataforma e atendimento ao cliente
+- Você escolhe seu profissional e deve verificar credenciais e licenças
+- A relação de cuidados é com o profissional, não com a Eleva.care
+- A Eleva.care não é responsável pelos cuidados que você recebe
 
-**Para Pacientes/Clientes:**
+## 6) Profissionais
 
-- Ferramentas de busca e descoberta de profissionais
-- Sistema seguro de agendamento e reservas de consultas
-- Processamento de pagamentos para serviços de profissionais (via Stripe)
-- Mensagens seguras com seu profissional escolhido
-- Acesso ao seu histórico de agendamentos
+Ao usar a Eleva.care, você declara e garante que:
 
-**Para Profissionais de Saúde:**
+- está devidamente licenciado e em boa situação
+- mantém seguro de responsabilidade profissional
+- é o único responsável pelos cuidados prestados e por obter consentimento informado
+- cumpre as leis e regulamentos de saúde aplicáveis
+- atua como prestador independente, não funcionário da Eleva.care
 
-- Criação e gerenciamento de perfil profissional
-- Ferramentas de agendamento de consultas
-- Armazenamento criptografado de notas clínicas (você controla o conteúdo)
-- Cobrança e processamento de pagamentos (via Stripe Connect)
-- Ferramentas de comunicação segura com pacientes
-- Armazenamento de anexos de arquivos (criptografado)
+## 7) Pagamentos e taxas
 
-**O Que NÃO Fornecemos:**
+- Preços e taxas são exibidos antes do pagamento; Stripe processa os pagamentos
+- Salvo quando a lei exigir, taxas não são reembolsáveis
+- Ajudaremos a resolver problemas de pagamento
 
-- ❌ Aconselhamento médico, diagnósticos ou tratamento
-- ❌ Supervisão médica ou fiscalização de profissionais
-- ❌ Verificação de credenciais médicas dos profissionais (os profissionais autocertificam)
-- ❌ Seguro de responsabilidade profissional médica
-- ❌ Serviços de saúde de qualquer tipo
+## 8) Privacidade
 
-Estes serviços estão sujeitos a alterações, e a Eleva.care reserva-se o direito de modificar ou descontinuar qualquer parte dos serviços da plataforma a qualquer momento.
+Seu uso é regido pela nossa Política de Privacidade. Tratamos dados pessoais conforme a lei aplicável, incluindo o GDPR e a LGPD, quando pertinente.
 
-## 3. Registro de Conta e Elegibilidade
+## 9) Propriedade intelectual
 
-Para acessar certas funcionalidades de nossos serviços, você deve criar uma conta. Você concorda em:
+A plataforma Eleva.care (texto, gráficos, logotipos e software) pertence à Eleva.care ou licenciadores. Não copie nem distribua sem permissão.
 
-- Fornecer informações precisas, atuais e completas durante o processo de registro.
-- Manter a segurança e confidencialidade das credenciais de sua conta.
-- Notificar a Eleva.care imediatamente de qualquer uso não autorizado de sua conta.
+## 10) Responsabilidade
 
-Você deve ter pelo menos 18 anos e ser legalmente capaz de celebrar um contrato em sua jurisdição para utilizar nossos serviços.
+Na máxima medida permitida por lei:
 
-## 4. Uso dos Serviços da Plataforma
+- prestamos serviços tecnológicos “no estado em que se encontram” e somos responsáveis apenas pela operação da plataforma
+- não somos responsáveis por cuidados médicos, aconselhamento, diagnóstico, tratamento, resultados ou disputas entre você e o profissional
 
-Você concorda em utilizar os serviços da plataforma Eleva.care apenas para fins lícitos e de acordo com estes Termos. É proibido:
+### Emergências
 
-- Violar quaisquer leis ou regulamentos aplicáveis.
-- Participar de atividades fraudulentas ou enganosas.
-- Distribuir conteúdo prejudicial, difamatório ou ilegal.
-- Interferir com o funcionamento normal da plataforma.
-- Fazer-se passar por um profissional de saúde licenciado (se não for).
-- Utilizar a plataforma para emergências médicas.
+A Eleva.care não é para emergências. Para ajuda urgente, ligue: Brasil 192 (SAMU) ou 193 (Bombeiros); UE 112; EUA 911.
 
-A Eleva.care pode suspender ou encerrar seu acesso se você violar estes Termos.
+## 11) Indenização
 
-### 4.1 Para Pacientes/Clientes
+Você indenizará e isentará a Eleva.care de reclamações e custos decorrentes de uso indevido da plataforma, violação destes Termos ou infração de direitos de terceiros.
 
-Você compreende e concorda que:
+## 12) Encerramento ou suspensão
 
-- Os profissionais de saúde em nossa plataforma são profissionais independentes, não funcionários da Eleva.care
-- Você é responsável por escolher seu profissional de saúde
-- Deve verificar as credenciais e licenciamento do profissional antes de agendar
-- Seu relacionamento é com o profissional, não com a Eleva.care
-- A Eleva.care não é responsável pelos cuidados médicos que você recebe
+Podemos suspender ou encerrar o acesso em caso de violação ou para proteger a comunidade. Você pode encerrar a conta a qualquer momento, contatando o suporte. Valores devidos permanecem exigíveis.
 
-### 4.2 Para Profissionais de Saúde
+## 13) Lei aplicável
 
-Ao utilizar nossa plataforma como profissional, você declara e garante que:
+Estes Termos são regidos pela lei portuguesa. Os tribunais de Portugal têm jurisdição sobre litígios relativos a estes Termos ou ao uso da Eleva.care.
 
-- É um profissional de saúde licenciado em boa situação
-- Mantém seguro de responsabilidade profissional vigente
-- É o único responsável por todos os cuidados médicos que presta
-- Cumprirá com todos os regulamentos de saúde aplicáveis
-- Obterá consentimento informado de seus pacientes
-- Compreende que é um prestador independente, não um funcionário da Eleva.care
+## 14) Alterações a estes Termos
 
-## 5. Termos de Pagamento
+Podemos atualizar estes Termos. Avisaremos alterações materiais; continuar a usar a Eleva.care significa aceitar os Termos atualizados.
 
-Certos serviços oferecidos pela Eleva.care são serviços pagos. Ao utilizar serviços pagos, você concorda em pagar as taxas aplicáveis, que serão claramente comunicadas no momento da compra. Os métodos de pagamento incluem cartões de crédito, transferências bancárias e outros sistemas de pagamento disponíveis.
+## 15) Informação ao consumidor da UE
 
-Todas as taxas não são reembolsáveis, exceto conforme exigido pela lei aplicável. Se houver um problema com o processamento do pagamento, a Eleva.care trabalhará com você para resolver o problema.
-
-## 6. Privacidade e Proteção de Dados
-
-Seu uso dos serviços da Eleva.care é regido por nossa **Política de Privacidade**. Estamos comprometidos em proteger seus dados pessoais e garantir o cumprimento das leis de proteção de dados aplicáveis, incluindo o **Regulamento Geral de Proteção de Dados (GDPR)** e a **Lei Geral de Proteção de Dados (LGPD)**.
-
-Ao utilizar nossos serviços, você consente com a coleta, uso e processamento de seus dados pessoais conforme descrito em nossa Política de Privacidade.
-
-## 7. Propriedade Intelectual
-
-Todo o conteúdo e materiais na plataforma Eleva.care, incluindo texto, gráficos, logotipos e software, são propriedade da Eleva.care ou de nossos licenciadores e estão protegidos por leis de propriedade intelectual. Você concorda em não utilizar, copiar ou distribuir qualquer destes materiais sem permissão explícita da Eleva.care.
-
-## 8. Limitação de Responsabilidade
-
-### 8.1 Responsabilidade da Plataforma
-
-Na máxima extensão permitida por lei, a Eleva.care é responsável apenas pelo desempenho de nossos **serviços de plataforma tecnológica**. Não somos responsáveis por quaisquer danos diretos, indiretos, incidentais, especiais ou consequentes resultantes de seu uso ou incapacidade de usar nossos serviços da plataforma.
-
-### 8.2 Sem Responsabilidade pelos Cuidados Médicos
-
-**A Eleva.care NÃO é responsável por:**
-
-- ❌ Quaisquer cuidados médicos, aconselhamento, diagnóstico ou tratamento fornecidos pelos profissionais
-- ❌ Resultados médicos, sejam positivos ou negativos
-- ❌ Negligência médica ou negligência profissional por parte dos profissionais
-- ❌ Qualificações, licenciamento ou credenciais dos profissionais
-- ❌ Qualidade dos serviços médicos prestados pelos profissionais
-- ❌ Disputas profissional-paciente relativamente a cuidados médicos
-- ❌ Quaisquer resultados de saúde decorrentes dos serviços dos profissionais
-
-**O profissional de saúde que você escolhe é o único responsável por todos os cuidados médicos que presta.**
-
-### 8.3 Aviso de Emergência
-
-**A Eleva.care NÃO é para emergências médicas.** Se estiver vivenciando uma emergência médica:
-
-- **Brasil**: Ligue 192 (SAMU) ou 193 (Bombeiros)
-- **UE**: Ligue 112
-- **EUA**: Ligue 911
-- Ou contate imediatamente seus serviços de emergência locais
-
-Não utilize nossa plataforma para situações médicas urgentes ou de emergência.
-
-## 9. Indenização
-
-Você concorda em indenizar e isentar a Eleva.care, seus afiliados, funcionários e parceiros de quaisquer reclamações, danos, responsabilidades e despesas decorrentes de seu uso de nossos serviços, violação destes Termos ou violação de quaisquer direitos de terceiros.
-
-## 10. Rescisão
-
-A Eleva.care pode suspender ou encerrar seu acesso aos serviços a qualquer momento, sem aviso prévio, se acreditarmos que você violou estes Termos ou participou de atividades que prejudicam a reputação ou os serviços da Eleva.care. Você pode encerrar sua conta entrando em contato com o atendimento ao cliente da Eleva.care.
-
-Após a rescisão, você deixará de ter acesso aos serviços, e todos os pagamentos pendentes devem ser liquidados.
-
-## 11. Lei Aplicável e Resolução de Disputas
-
-Estes Termos são regidos pelas leis de Portugal. Quaisquer disputas decorrentes destes Termos ou do uso de nossos serviços serão resolvidas nos tribunais de Portugal.
-
-## 12. Alterações aos Termos
-
-A Eleva.care reserva-se o direito de atualizar ou modificar estes Termos a qualquer momento. Notificaremos sobre quaisquer alterações materiais por email ou através da plataforma. O uso continuado de nossos serviços após a realização de alterações será considerado aceitação dos Termos atualizados.
-
-## 13. Disposições Diversas
-
-- **Divisibilidade:** Se qualquer disposição destes Termos for considerada inválida ou inaplicável, as restantes disposições permanecerão em vigor.
-- **Renúncia:** O não cumprimento de qualquer parte destes Termos não renuncia ao nosso direito de aplicar essas disposições no futuro.
-
-## 14. Direitos do Consumidor e Resolução Alternativa de Disputas (UE)
-
-Nada nestes Termos afeta direitos legais de consumidores que não podem ser renunciados conforme a lei aplicável. Se você é consumidor residente na UE/EEE, pode acessar a plataforma de Resolução de Disputas Online (ODR) da Comissão Europeia: https://ec.europa.eu/consumers/odr. Não somos obrigados nem nos comprometemos a utilizar entidades de ADR para resolver disputas de consumo, salvo quando exigido por lei.
-
-### Direito de Arrependimento
-
-Quando o direito de arrependimento da UE for aplicável a certos serviços não relacionados à saúde da plataforma, você poderá desistir em 14 dias, a menos que solicite expressamente a prestação imediata. Para serviços de saúde com data/hora específica prestados por profissionais independentes por meio da plataforma, o direito de arrependimento pode não se aplicar após o início do serviço ou para serviços agendados para data e hora determinadas, em conformidade com as isenções legais aplicáveis.
+- Seus direitos legais não são afetados. Plataforma ODR da Comissão Europeia: https://ec.europa.eu/consumers/odr
+- Direito de arrependimento: quando aplicável a certos serviços não relacionados à saúde, você pode desistir em 14 dias, salvo pedido de execução imediata. Para serviços de saúde em data/hora específica prestados por profissionais independentes, a desistência pode não se aplicar após o início do serviço ou para serviços com data/hora marcada, conforme a lei.
 
 ---
 
-## Informação Legal
+## Informação legal
 
-Estes Termos e Condições são emitidos por:
+Emitido por:
 
 - **Entidade Legal:** BÚZIOS E TARTARUGAS - LDA
 - **Nome Comercial:** Eleva.care
